--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,2 +1,20 @@
 @import "template";
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/fontawesome-webfont.eot');
+  src: url('../fonts/fontAwesome.otf') format("opentype"),
+  url('../fonts/fontawesome-webfont.woff') format("woff"),
+  url('../fonts/fontawesome-webfont.woff2') format("woff2"),
+  url('../fonts/fontawesome-webfont.ttf') format("truetype"),
+  url('../fonts/fontawesome-webfont.svg') format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon:before {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+}
